# python-template

./: .env.shared  .envrc  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  README.md  noxfile.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: workflow.yml
src/bar/: fibonacci.py
src/python_template/: __init__.py
tests/: test_calc.py
tests/bar/: test_fibonacci.py
tests/foo/: test_calculator.py
