[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"
packages = [{include = "python_template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
